se corrige el tema usuarios y bcrypt

--- a/src/views/errorLogin.ejs
+++ b/src/views/errorLogin.ejs
@@ -11,7 +11,7 @@
 
     <body>
         <h1>Usuario o contrasena invalida</h1>
-        <button onclick="location.href='/login'" class="button is-primary mt-3">Go to login</button>
+        <button onclick="location.href='/api/login'" class="button is-primary mt-3">Go to login</button>
     </body>
 
 </html>
