--- a/src/views/errorRegistro.ejs
+++ b/src/views/errorRegistro.ejs
@@ -11,7 +11,7 @@
 
     <body>
         <h1>Este usuario ya se encuentra registrado</h1>
-        <button onclick="location.href='/registro'" class="button is-primary mt-3">Go to register</button>
+        <button onclick="location.href='/api/registro'" class="button is-primary mt-3">Go to register</button>
     </body>
 
 </html>
