--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,7 +14,7 @@
         <div class="notification is-primary">
             <h1 class="is-size-2">💟 Bienvenid@ <%=nombre%></h1>
         </div>
-        <button class="button is-danger mt-3" onclick="location.href='/logout'">Logout</button>
+        <button class="button is-danger mt-3" onclick="location.href='/api/logout'">Logout</button>
     </div>
     <div class="container mt-6">
     <h1>Acá verás el contenido de la página</h1>
