--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="field">
             <label class="label mt-6">Nombre</label>
-            <form action="/login" method="post" class="control has-icons-left has-icons-right">
+            <form action="/api/login" method="post" class="control has-icons-left has-icons-right">
                 <input class="input is-success mt-3" type="email" name="email" placeholder="Ingresa tu e-mail" >
                 <input class="input is-success mt-3" type="password" name="password" placeholder="Ingresa tu contrasena" >
                 <span class="icon is-small is-left">
@@ -25,7 +25,7 @@
         
         <div class="field mt-6">
             <label class="label">No tiene un usuario?</label>
-            <button onclick="location.href='/registro'" class="button is-primary mt-3">Go to register</button>
+            <button onclick="location.href='/api/registro'" class="button is-primary mt-3">Go to register</button>
         </div>
    </div>
 </body>
