--- a/src/views/logout.ejs
+++ b/src/views/logout.ejs
@@ -14,7 +14,7 @@
         <div class="notification is-primary">
             <h1 class="is-size-2" >Hasta pronto<strong> <%= nombre %> </strong> 👋</h1>
         </div>
-        <button onclick="location.href='/login'" class="button is-primary mt-3">Go to login</button>
+        <button onclick="location.href='/api/login'" class="button is-primary mt-3">Go to login</button>
     </div>
 </body>
 
