--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -14,9 +14,10 @@
         <div class="field">
             <label class="label mt-6">Nuevo usuario</label>
             <!-- para que se use el action="/login" ?? -->
-            <form action="/registro" method="post" class="control has-icons-left has-icons-right">
+            <form action="/api/registro" method="post" class="control has-icons-left has-icons-right">
                 <input class="input is-success mt-3" type="email" name="email" placeholder="Ingresa tu e-mail" >
                 <input class="input is-success mt-3" type="text" name="nombre" placeholder="Ingresa tu nombre" >
+                <input class="input is-success mt-3" type="text" name="apellido" placeholder="Ingresa tu apellido" >
                 <input class="input is-success mt-3" type="password" name="password" placeholder="Ingresa tu contrasena" >
                 <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
@@ -27,7 +28,7 @@
         
         <div class="field mt-6">
             <label class="label">Ya tienes un usuario?</label>
-            <button onclick="location.href='/login'" class="button is-primary mt-3">Go to login</button>
+            <button onclick="location.href='/api/login'" class="button is-primary mt-3">Go to login</button>
         </div>
    </div>
 </body>
